Fixed wording in input editor.